fix bullet contrast 2

--- a/assets/style.css
+++ b/assets/style.css
@@ -128,11 +128,11 @@ body {
 }
 
 .carousel-indicators .gallery-button {
-	background-color: rgba (0,0,0,0.7);
+	background-color: rgba (0,0,0,0.7) !important;
 }
 
 .carousel-indicators .active {
-	background-color: rgba (0,0,0,1);
+	background-color: rgba (0,0,0,1) !important;
 }
 
 .mg-prev, .mg-next {
